--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,13 @@ file(GLOB_RECURSE HEADER_FILES include/*.hpp)
 
 file(GLOB_RECURSE GLAD_SOURCE_FILES libraries/glad/src/*.c)
 
+file(GLOB IMGUI_SOURCE_FILES libraries/imgui/*.cpp)
+file(GLOB IMGUI_HEADER_FILES libraries/imgui/*.h)
+file(GLOB_RECURSE IMGUI_BACKENDS_GLFW_FILES libraries/imgui/backends/imgui_impl_glfw.*)
+file(GLOB_RECURSE IMGUI_BACKENDS_GL3_FILES libraries/imgui/backends/imgui_impl_opengl3.*)
+
 # Make the executable with the headers & sources (NO TESTS)
-add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES} ${GLAD_SOURCE_FILES})
+add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES} ${GLAD_SOURCE_FILES} ${IMGUI_SOURCE_FILES} ${IMGUI_HEADER_FILES} ${IMGUI_BACKENDS_GLFW_FILES} ${IMGUI_BACKENDS_GL3_FILES})
 
 # Set the directory where CMakeLists.txt is to be the working directory
 set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
@@ -20,6 +25,7 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CM
 # Target the include folder (used to make headers visible in visual studio)
 target_include_directories(${PROJECT_NAME} PRIVATE include)
 target_include_directories(${PROJECT_NAME} PRIVATE libraries/glad/include)
+target_include_directories(${PROJECT_NAME} PRIVATE libraries/imgui)
 
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
@@ -55,7 +61,7 @@ file(GLOB_RECURSE HEADER_FILES include/*.hpp)
 file(GLOB_RECURSE GLAD_SOURCE_FILES libraries/glad/src/*.c)
 
 # Make the executable with the headers & sources (NO TESTS)
-add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES} ${GLAD_SOURCE_FILES})
+add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES} ${GLAD_SOURCE_FILES} ${IMGUI_SOURCE_FILES} ${IMGUI_HEADER_FILES} ${IMGUI_BACKENDS_GLFW_FILES} ${IMGUI_BACKENDS_GL3_FILES})
 
 # Set the directory where CMakeLists.txt is to be the working directory
 set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
@@ -63,6 +69,7 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CM
 # Target the include folder (used to make headers visible in visual studio)
 target_include_directories(${PROJECT_NAME} PRIVATE include)
 target_include_directories(${PROJECT_NAME} PRIVATE libraries/glad/include)
+target_include_directories(${PROJECT_NAME} PRIVATE libraries/imgui)
 target_compile_definitions(${PROJECT_NAME} PUBLIC AL_DEBUG)
 
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
