App architecture, file dialog & FFT
- Moved NES components to a NES wrapper class
- ROMs can now be opened through a dialog window
- Sound FFT can now be plot

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "libraries/imgui"]
 	path = libraries/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "libraries/nativefiledialog"]
+	path = libraries/nativefiledialog
+	url = https://github.com/hjalleboii/nativefiledialog.git
