--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "libraries/nativefiledialog"]
 	path = libraries/nativefiledialog
 	url = https://github.com/hjalleboii/nativefiledialog.git
+[submodule "libraries/implot"]
+	path = libraries/implot
+	url = https://github.com/epezent/implot.git
