Builds on Linux with x86
- Changed files to compiles on my Ubuntu 24 distribution
    - Should work for others but not tested

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14) 
 
 # *************** Release *************** #
-project(simple-nes-emulator LANGUAGES CXX)
+project(simple-nes-emulator LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -49,9 +49,9 @@ target_include_directories(${PROJECT_NAME} PRIVATE libraries/nativefiledialog/sr
 
 # Verbose warnings & warnings are errors
 if(MSVC)
-  target_compile_options(${PROJECT_NAME} PRIVATE /W4 /WX)
+  set_source_files_properties(${SOURCE_FILES} ${HEADER_FILES} PROPERTIES COMPILE_FLAGS "/W4 /WX")
 else()
-  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
+  set_source_files_properties(${SOURCE_FILES} ${HEADER_FILES} PROPERTIES COMPILE_FLAGS "-Wall -Wextra -Wpedantic -Werror")
 endif()
 
 
