--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/epezent/implot.git
 [submodule "libraries/nativefiledialog_fork"]
 	path = libraries/nativefiledialog_fork
-	url = git@github.com:VoltXd/nativefiledialog.git
+	url = https://github.com/VoltXd/nativefiledialog.git
